--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "carcassonne_duel",
-  "version": "0.1.0",
-  "private": true,
+  "name": "carcassonne-duel",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "vite": "^5.0.0"
   }
 }
