--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
 {
-  "rewrites": [
-    { "source": "/assets/tiles/:file*", "destination": "/assets/tiles/:file*" },
-    { "source": "/assets/:path*", "destination": "/assets/:path*" }
-  ],
-  "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/$1" }]
 }
